@@ -79,6 +79,7 @@ sources = """
           timeline_dialog.cc
           timeline_audio_content_view.cc
           timeline_subtitle_content_view.cc
+          timeline_reels_view.cc
           timeline_time_axis_view.cc
           timeline_video_content_view.cc
           timeline_view.cc
